k8s/technitium/service-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-external
  namespace: kube-system
spec:
  ports:
    - port: 5380
---
apiVersion: v1
kind: Endpoints
metadata:
  name: technitium-external
  namespace: kube-system
subsets:
  - addresses:
      - ip: 10.83.16.98
    ports:
      - port: 5380
